# sieve-of-eratosthenes

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/sieves/: mod.rs  original.rs  segmented.rs
