[package]
name = "sieve-of-eratosthenes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
overflow-checks = false
debug = true

[profile.test]
opt-level = 3

[profile.release-with-debug-info]
inherits = "release"
debug = true